antras page su islygiuotom eilutem su gridu

--- a/task.html
+++ b/task.html
@@ -25,17 +25,25 @@
             <div class="main">         
                <div class="tasks">
                     <span class="edittask">Edit Task</span>
+                    <div class="grid">
                         <div class="taskid">
-                            <label for="Task ID">Task ID</label>
-                            <span>123456789</span>
+                            <label for="Task ID">Task ID</label> 
+                        </div>
+                        <div class="number">
+                            <span >123456789</span>
                         </div> 
                         <div class="name">
                             <label for="name">Name</label>
+                        </div>
+                        <div class="example">
                             <input class="example" required type="text" name="Take out trashes" value="Take out trashes">
                         </div>
                         <div class="completed">
                           <label for="completed">Completed</label>
+                        </div>
+                        <div class="checkbox">
                             <input type="checkbox"> 
+                        </div>
                         </div>       
                         <div class="edit button">
                             <button class="button">Edit</button>                
